2005-03-12  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new ports: i386-pc-linux-rhel4.

	* minor new ports: powerpc-apple-darwin7.8.0.

2005-03-10  Erez Zadok  <ezk@cs.sunysb.edu>

	* ltmain.sh: upgrade from libtool-1.5.6.

	* m4/macros/check_{fs_mntent,mnttab_type,mount_type}.m4: check for
	Linux 2.6 kernel modules, which have a .ko extension, not .o.  Now
	we can properly detect which file systems exist on Linux 2.6 based
	systems (SLES9, RHEL4, Fedora, etc.).

2005-03-09  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/host_macros.m4: find out what's the OS software
	distribution name, if any.

	* m4/macros/header_templates.m4: template for DISTRO_NAME.

	* amd/get_args.c (get_version_string): print again full_os, os,
	osver, and vendor (bug fix).
	(get_version_string): print distribution name, if known (e.g.,
	rh9, suse8, etc.).

	* amd/mapc.c (mapc_showtypes): wrap around list of supported map.

2005-03-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/map.c (umount_exported): when unmounting file systems on
	exit (when amd.conf global unmount_on_exit=yes), use unmount_mp()
	instead of unmount_node() because the latter always unmounts in
	the foreground, whereas the former unmounts in the bg/fg as
	needed.  Unmounting always in the foreground has two problems: (1)
	if the unmount hangs, amd hangs, and (2) for type:=program, the
	unmount script is execve'd(!) thus replacing the main amd process,
	which never gets to finish up, leaving the amd mount points hung.

	* NEWS: mention new feature of executable maps.

	* AUTHORS: Acknowledge Erik Kline.

	* scripts/amd.conf.5: document executable maps and
	exec_map_timeout parameter.

	* scripts/amd.conf-sample: examples of an executable map and
	exec_map_timeout.

	* m4/macros/header_templates.m4: template for HAVE_MAP_EXEC.

	* doc/am-utils.texi: document Executable maps and exec_map_timeout
	parameter.

	* amd/conf.c (gopt_exec_map_timeout): function to parse
	exec_map_timeout [global] parameter.
