@@ -6,6 +6,9 @@
 
 2005-03-10  Erez Zadok  <ezk@cs.sunysb.edu>
 
+	* amd/ops_nfs.c (prime_nfs_fhandle_cache): rearrange code so it's
+	cleaner.
+
 	* ltmain.sh: upgrade from libtool-1.5.6.
 
 	* m4/macros/check_{fs_mntent,mnttab_type,mount_type}.m4: check for
